# EventCore

./: CMakeLists.txt  LICENSE  README.md  build.sh  tags
.github/: copilot-instructions.md
benchmarks/: CMakeLists.txt  benchmark.sh  benchmark_memory.cpp  benchmark_throughput.cpp
cmake/: CompilerOptions.cmake  EventCoreConfig.cmake.in  FindDependencies.cmake  InstallConfig.cmake  cmake_uninstall.cmake.in  eventcore.pc.in
docs/: architecture.txt  concepts.txt  getting_started.md  reuse.txt
eventroot/include/eventcore/core/: logger.h
eventroot/include/eventcore/http/: parser.h  request.h
eventroot/include/eventcore/net/: buffer.h  poller.h
eventroot/include/eventcore/server/: worker.h
eventroot/include/eventcore/thread/: blocking_queue.h  thread_pool.h
eventroot/lib/cmake/EventCore/: EventCoreConfig.cmake  EventCoreTargets-release.cmake  EventCoreTargets.cmake
eventroot/lib/pkgconfig/: eventcore.pc
examples/: CMakeLists.txt  logger_example.cpp  simple_api.cpp  static_file_server.cpp
examples/nagle-algorithm/: client  client.cc  server  server.cc
include/eventcore/core/: logger.h
include/eventcore/http/: response.h  router.h
include/eventcore/server/: config.h
include/eventcore/thread/: thread_pool.h
scripts/: EventCore_consolidated.txt  build.sh  format.sh  generate_all.sh  test.sh
src/: main.cpp
src/core/: logger.cpp
src/http/: connection.cpp  parser.cpp  request.cpp  response.cpp  router.cpp
src/net/: address.cpp  buffer.cpp  poller.cpp  socket.cpp
src/server/: connection_pool.cpp  server.cpp  worker.cpp
src/thread/: thread_pool.cpp
temp/: architecture.txt
tests/: CMakeLists.txt  test_http.cpp  test_net.cpp  test_server.cpp  test_socket_options.cpp  test_thread.cpp
